Minor fix on mobile view. Changing content order for xs screen.

--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,7 @@
 .default-theme {
   color: teal;
 }
+
+.icon_button:focus {
+    outline: none;
+}
